@@ -1,0 +1,8 @@
+#ifndef EXTCONF_H
+#define EXTCONF_H
+#define HAVE_JNI_H 1
+#define HAVE_DL_H 1
+#define HAVE_SETLOCALE 1
+#define HAVE_GETENV 1
+#define RJB_RUBY_VERSION_CODE 187
+#endif
